--- a/firstProject/package.json
+++ b/firstProject/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "first-project",
+  "name": "firstproject",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -10,7 +10,6 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@tailwindcss/cli": "^4.0.14",
     "@tailwindcss/vite": "^4.0.14",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
